--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15213,8 +15213,8 @@ button:focus {
 }
 
 .table td {
-    padding-top: 3rem;
-    padding-bottom: 3rem
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .table .price-col {
