--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -33,10 +33,13 @@
                                 <a class="nav-link active" id="tab-dashboard-link" data-toggle="tab" href="#tab-dashboard" role="tab" aria-controls="tab-dashboard" aria-selected="true">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="tab-orders-link" data-toggle="tab" href="#tab-orders" role="tab" aria-controls="tab-orders" aria-selected="false">Orders</a>
+                                <a class="nav-link" id="tab-orders-link" data-toggle="tab" href="#tab-orders" role="tab" aria-controls="tab-orders" aria-selected="false">My Shop</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" id="tab-downloads-link" data-toggle="tab" href="#tab-downloads" role="tab" aria-controls="tab-downloads" aria-selected="false">My Shop</a>
+                                <a class="nav-link" id="tab-downloads-link" data-toggle="tab" href="#tab-downloads" role="tab" aria-controls="tab-downloads" aria-selected="false">My orders</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="tab-list-buyer" data-toggle="tab" href="#tab-buyer" role="tab" aria-controls="tab-buyer" aria-selected="false">Buyer orders</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" id="tab-address-link" data-toggle="tab" href="#tab-address" role="tab" aria-controls="tab-address" aria-selected="false">Adresses</a>
@@ -59,32 +62,21 @@
                             </div><!-- .End .tab-pane -->
 
                             <div class="tab-pane fade" id="tab-orders" role="tabpanel" aria-labelledby="tab-orders-link">
-                                <p>No order has been made yet.</p>
-                                <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="las la-long-arrow-alt-right"></i></a>
-                            </div><!-- .End .tab-pane -->
-
-                            <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
-
                                 <div class="col-lg-12">
                                     <table class="table table-cart table-mobile">
                                         <thead>
+                                        <div><p class="font-weight-bold">User Buyer name</p></div>
                                         <tr>
                                             <th>Product</th>
                                             <th>Price</th>
                                             <th>Quantity</th>
-                                            <th>Total</th>
+                                            <th>Status</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr>
                                             <td class="product-col">
                                                 <div class="product">
-                                                    <figure class="product-media">
-                                                        <a href="#">
-                                                            <img src="images/index/products/product-1.jpg" alt="Product image">
-                                                        </a>
-                                                    </figure>
-
                                                     <h3 class="product-title">
                                                         <a href="#">Beige knitted elastic runner shoes</a>
                                                     </h3><!-- End .product-title -->
@@ -100,8 +92,85 @@
                                         </tbody>
                                     </table><!-- End .table table-wishlist -->
                                 </div>
-                                <a href="/createproduct" class="btn btn-outline-primary-2"><span>Create Product</span><i class="las la-long-arrow-alt-right"></i></a>
+                              </div><!-- .End .tab-pane -->
+
+                            <div class="tab-pane fade" id="tab-downloads" role="tabpanel" aria-labelledby="tab-downloads-link">
+                                <div class="col-lg-12">
+                                    <a href="/createproduct" class="btn btn-outline-primary-2"><span>Create Product</span><i class="las la-long-arrow-alt-right"></i></a>
+                                </div>
+                                <div class="col-lg-12">
+                                   <form action="" method="post">
+                                    <table class="table table-cart table-mobile">
+                                        <thead>
+                                        <tr>
+                                            <th>Product</th>
+                                            <th>Price</th>
+                                            <th>Quantity</th>
+                                            <th>Total</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td class="product-col">
+                                                <div class="product">
+                                                    <h3 class="product-title">
+                                                        <a href="#">Beige knitted elastic runner shoes</a>
+                                                    </h3><!-- End .product-title -->
+                                                </div><!-- End .product -->
+                                            </td>
+                                            <td class="price-col">$84.00</td>
+                                            <td class="quantity-col">
+                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                            </td>
+                                            <td class="total-col">$84.00</td>
+                                        </tr>
+                                        <tr>
+                                            <td><span>Seller: user</span></td>
+                                            <td><span>Subtotal: 15$</span></td>
+                                            <td colspan="2"><span><a href="" class="btn btn-primary float-right">Product received</a> </span></td>
+                                        </tr>
+                                        </tbody>
+                                    </table><!-- End .table table-wishlist -->
+                                   </form>
+                                </div>
+
                             </div><!-- .End .tab-pane -->
+
+                            <div class="tab-pane fade" id="tab-buyer" role="tabpanel" aria-labelledby="tab-buyer">
+
+                                <div class="col-lg-12">
+                                    <a href="category.html" class="btn btn-outline-primary-2"><span>GO SHOP</span><i class="las la-long-arrow-alt-right"></i></a>
+                                    <table class="table table-cart table-mobile">
+                                        <thead>
+                                        <tr>
+                                            <th>Product</th>
+                                            <th>Price</th>
+                                            <th>Quantity</th>
+                                            <th>Status</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td class="product-col">
+                                                <div class="product">
+                                                    <h3 class="product-title">
+                                                        <a href="#">Beige knitted elastic runner shoes</a>
+                                                    </h3><!-- End .product-title -->
+                                                </div><!-- End .product -->
+                                            </td>
+                                            <td class="price-col">$84.00</td>
+                                            <td class="quantity-col">
+                                                <div class="cart-product-quantity">8</div><!-- End .cart-product-quantity -->
+                                            </td>
+                                            <td class="total-col">$84.00</td>
+                                            <td class="remove-col"><button class="btn-remove"><i class="icon-close"></i></button></td>
+                                        </tr>
+                                        </tbody>
+                                    </table><!-- End .table table-wishlist -->
+                                </div>
+
+                            </div><!-- .End .tab-pane -->
+
 
                             <div class="tab-pane fade" id="tab-address" role="tabpanel" aria-labelledby="tab-address-link">
                                 <p>The following addresses will be used on the checkout page by default.</p>
