--- a/src/main/resources/templates/layout/adminlayout/sidebar_user.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar_user.html
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/list">
+                <a class="nav-link" href="#">
                     <i class="material-icons">manage_accounts</i>
                     <p>My information</p>
                 </a>
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" th:href="@{/listnew}">
+                <a class="nav-link" href="/listorder">
                     <i class="material-icons">library_books</i>
                     <p>My order</p>
                 </a>
