--- a/src/main/resources/templates/layout/adminlayout/sidebar_user.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar_user.html
@@ -42,7 +42,7 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/Shipper_Admin">
+                <a class="nav-link" href="/listOrderProduct">
                     <i class="material-icons">local_shipping</i>
                     <p>Buyer Order</p>
                 </a>
