--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/template.html}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
-<h1>Payment Success</h1>
+<div layout:fragment="content" class="text-center done" >
+    <h1><i class="las la-check-circle"></i></h1>
+    <h1>Thank You!</h1>
+    <p>Your order was successful.</p>
+    <p>You can check your order status <a href="/listorder">here</a> </p>
+</div>
 </body>
 </html>
