--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -162,20 +162,7 @@
                                         <a href="#">Shop</a>
                                     </li>
                                     <li>
-                                        <a href="/products" class="sf-with-ul" >Product</a>
-                                        <div class="megamenu megamenu-sm">
-                                            <div class="row no-gutters">
-                                                <div class="col-md-6">
-                                                    <div class="menu-col">
-                                                        <div class="menu-title">Product Details</div><!-- End .menu-title -->
-                                                        <ul>
-                                                            <li><a href="/products">List All</a></li>
-                                                            <li><a href="/products">List By Seller</a></li>
-                                                        </ul>
-                                                    </div><!-- End .menu-col -->
-                                                </div><!-- End .col-md-6 -->
-                                            </div><!-- End .row -->
-                                        </div><!-- End .megamenu megamenu-sm -->
+                                        <a href="/products">Product</a>
                                     </li>
                                     <li>
                                         <a href="#" >Brand</a>
