--- a/src/main/resources/templates/pay.html
+++ b/src/main/resources/templates/pay.html
@@ -83,7 +83,8 @@
                                         <td>
                                             <select aria-label="Shipping" class="form-control" name="ship">
                                                 <option th:each="item:${ship}"
-                                                th:text="${item.name} + ' - ' + ${item.price}">GHTK</option>
+                                                th:text="${item.name} + ' - ' + ${item.price}"
+                                                th:value="${item.price}">GHTK</option>
                                             </select>
                                         </td>
                                     </tr>
