--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -64,7 +64,7 @@
                         <div class="header-right" sec:authorize="isAuthenticated()">
                             <div class="header-dropdown-link">
                                 <div class="account">
-                                    <a href="/userIndex" title="My account">
+                                    <a href="/adminIndex" title="My account">
                                         <div class="icon">
                                             <i class="las la-user"></i>
                                         </div>
