--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -10,7 +10,7 @@
     <meta name="description" content="LPD GameStore">
     <meta name="author" content="p-themes">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
-    <link type="text/css" rel="stylesheet" th:href="@{vendors/css/line-awesome.min.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{vendor/css/line-awesome.min.css}">
     <!-- Plugins CSS File -->
     <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{css/plugins/owl-carousel/owl.carousel.css}">
