--- a/src/main/resources/templates/layout/adminlayout/sidebar.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -24,39 +25,51 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/list">
+                <a class="nav-link" href="/list" th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                     <i class="material-icons">manage_accounts</i>
                     <p>User</p>
                 </a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                 <a class="nav-link" href="/listProductUser">
                     <i class="material-icons">content_paste</i>
                     <p>Table List</p>
                 </a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                 <a class="nav-link" th:href="@{/listnew}">
                     <i class="material-icons">library_books</i>
                     <p>News</p>
                 </a>
             </li>
-            <li class="nav-item ">
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
                 <a class="nav-link" href="/Shipper_Admin">
                     <i class="material-icons">local_shipping</i>
                     <p>Shipper</p>
                 </a>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="./map.html">
-                    <i class="material-icons">receipt</i>
-                    <p>Order</p>
-                </a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link" href="./notifications.html">
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''USER'')')}">
+                <a class="nav-link" href="/listProductUser">
                     <i class="material-icons">notifications</i>
                     <p>Notifications</p>
+                </a>
+            </li>
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''USER'')')}">
+                <a class="nav-link" href="/listProductUser">
+                    <i class="material-icons">content_paste</i>
+                    <p>My Product</p>
+                </a>
+            </li>
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''USER'')')}">
+                <a class="nav-link" href="/listorder">
+                    <i class="material-icons">library_books</i>
+                    <p>My order</p>
+                </a>
+            </li>
+            <li class="nav-item " th:if="${#authorization.expression('hasAuthority(''USER'')')}">
+                <a class="nav-link" href="/listOrderProduct">
+                    <i class="material-icons">local_shipping</i>
+                    <p>Buyer Order</p>
                 </a>
             </li>
             <li class="nav-item ">
