--- a/src/main/resources/templates/layout/adminlayout/sidebar_user.html
+++ b/src/main/resources/templates/layout/adminlayout/sidebar_user.html
@@ -36,7 +36,7 @@
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/listorder">
+                <a class="nav-link" href="/order">
                     <i class="material-icons">library_books</i>
                     <p>My order</p>
                 </a>
