--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/template.html}">
+      layout:decorate="~{layout/adminlayout/template_user.html}">
 <title>list order</title>
 
 <body >
