--- a/src/main/resources/templates/orderdetail.html
+++ b/src/main/resources/templates/orderdetail.html
@@ -2,13 +2,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/template.html}">
+      layout:decorate="~{layout/adminlayout/template_user.html}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<main class="main" layout:fragment="content">
+<div class="main-panel" layout:fragment="content">
     <div class="content">
         <div class="container-fluid">
             <div class="row">
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-</main><!-- End .main -->
+</div>
 
 </body>
 </html>
